Add examples for all functions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,15 +2,16 @@
 
 export(GSEA_analysis)
 export(Test_DE_cluster)
+export(addcelltype_Seurat)
 export(check_cluster)
-export(scTypeGSEA)
+export(check_seurat)
+importFrom(Seurat,CreateSeuratObject)
 importFrom(Seurat,FindClusters)
 importFrom(Seurat,FindMarkers)
 importFrom(Seurat,FindNeighbors)
 importFrom(Seurat,FindVariableFeatures)
 importFrom(Seurat,NormalizeData)
 importFrom(Seurat,PercentageFeatureSet)
-importFrom(Seurat,Project)
 importFrom(Seurat,RenameIdents)
 importFrom(Seurat,RunPCA)
 importFrom(Seurat,ScaleData)
