--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,5 +12,8 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
+Depends:
+    R (>= 2.10)
 Imports: Seurat,
          fgsea
+  
