Add "vignettes" file.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,4 +20,7 @@ Depends:
 Imports: Seurat,
          fgsea
 Suggests: 
-    testthat (>= 2.1.0)
+    testthat (>= 2.1.0),
+    knitr, 
+    rmarkdown
+VignetteBuilder: knitr
