--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,7 @@ Authors@R:
            role = c("aut", "cre"),
            email = "victorguanxun@gmail.com",
            comment = c(ORCID = "YOUR-ORCID-ID"))
+Maintainer: Guanxun Li <victorguanxun@gmail.com>
 Description: This package is used to label cell type for each cell in single-cell data. 
              After doing data pre-process, cluster and find marker genes for each cluster, 
             "scTypeGSEA" label cell type for each cluster by Gene set enrichment analysis (GSEA). 
