--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,17 +5,21 @@ export(atac2rna)
 export(doClustering)
 export(doGSEA)
 export(getFC)
-export(labelSeurat)
+export(labelCelltype)
 export(scqc)
 importFrom(GenomeInfoDb,keepStandardChromosomes)
+importFrom(Seurat,CreateAssayObject)
 importFrom(Seurat,CreateGeneActivityMatrix)
 importFrom(Seurat,CreateSeuratObject)
+importFrom(Seurat,DefaultAssay)
 importFrom(Seurat,FindClusters)
 importFrom(Seurat,FindMarkers)
 importFrom(Seurat,FindNeighbors)
 importFrom(Seurat,FindVariableFeatures)
+importFrom(Seurat,Idents)
 importFrom(Seurat,NormalizeData)
 importFrom(Seurat,PercentageFeatureSet)
+importFrom(Seurat,Project)
 importFrom(Seurat,RenameIdents)
 importFrom(Seurat,RunPCA)
 importFrom(Seurat,ScaleData)
@@ -27,4 +31,7 @@ importFrom(Signac,NucleosomeSignal)
 importFrom(Signac,SetFragments)
 importFrom(ensembldb,genes)
 importFrom(fgsea,fgseaMultilevel)
+importFrom(stats,cutree)
+importFrom(stats,dist)
+importFrom(stats,hclust)
 importFrom(stats,sd)
