--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,6 +4,7 @@ Version: 1.0.1
 Authors@R: c(person(given = "Guanxun", family = "Li", role = c("aut","cre"), email = "victorguanxun@gmail.com"),
              person(given = "Daniel", family = "Osorio", role = c("aut", "ctb"), email = "dcosorioh@tamu.edu", comment = c(ORCID = '0000-0003-4424-8422')),
              person(given = "Yan", family = "Zhong", role = c("aut","ctb")),
+             person(given = "Lahong", family = "Xu", role = c("aut", "ctb"), email = "xulahong@tamu.edu")
              person(given = "Jianhua", family = "Huang", role = c("aut","ths")),
              person(given = "James", family = "Cai", role = c("aut", "ths"), comment = c(ORCID = '0000-0002-8081-6725'))
              )
