--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,11 +17,11 @@ Depends:
     R (>= 3.6)
 Imports: Seurat,
          fgsea,
-         MAST,
-         Rtsne,
-         ensembldb,
-         GenomeInfoDb
 Suggests: 
     testthat (>= 2.1.0),
     knitr, 
-    rmarkdown
+    rmarkdown,
+    MAST,
+    Rtsne,
+    ensembldb,
+    GenomeInfoDb
