--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,16 +12,18 @@ Description: A quick way to assign cell type for single cell RNA sequence data a
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.0.0
+RoxygenNote: 7.1.0
 Depends:
     R (>= 3.6)
-Imports: Seurat,
-         fgsea,
+Imports:
+    Seurat,
+    fgsea,
+    stats
 Suggests: 
     testthat (>= 2.1.0),
     knitr, 
     rmarkdown,
-    MAST,
     Rtsne,
+    MAST,
     ensembldb,
     GenomeInfoDb
